Authentication Level-5: Users credentials/ sessions authentication/ Cookies

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -21,7 +21,7 @@
             <button type="submit" class="btn btn-dark">Login</button>
           </form>
           <br>
-          <h6 style="color:brown"><%= locals.message %></h6>
+          <h6 style="color:brown"><%= locals.messages[0] %></h6>
 
         </div>
       </div>
