Authentication Level-6: OAuth 2.0 & Implement Sign In with Google

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,20 +23,22 @@
           <br>
           <h6 style="color:brown"><%= locals.messages[0] %></h6>
 
+
         </div>
       </div>
     </div>
 
-    <!-- <div class="col-sm-4">
+    <div class="col-sm-4">
       <div class="card">
         <div class="card-body">
-          <a class="btn btn-block" href="/auth/google" role="button">
+          <a class="btn btn-block btn-social btn-google" href="/auth/google" role="button">
             <i class="fab fa-google"></i>
-            Sign In with Google
+            Sign Up with Google
           </a>
         </div>
+
       </div>
-    </div> -->
+    </div>
 
   </div>
 </div>
