--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -4,7 +4,10 @@
   <div class="container">
     <i class="fas fa-key fa-6x"></i>
     <h1 class="display-3">You've Discovered My Secret!</h1>
-    <p class="secret-text">My family are my heros 🙂</p>
+    <% userWithSecrets.forEach(function(user){ %>
+      <p class="secret-text"><%= user.secret %></p>
+    <% }) %>
+    
     <hr>
     
     <a class="btn btn-light btn-lg" href="/logout" role="button">Log Out</a>
@@ -13,3 +16,4 @@
 </div>
 
 <%- include('partials/footer') %>
+
